--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,7 +4,12 @@
   box-sizing: border-box;
   font-family: "Times New Roman", Times, serif;
 }
+/* root styles*/
+:root {
+  --hue-neutral: 200;
+}
 
+/* body styles*/
 body {
   padding: 0;
   margin: 0;
@@ -14,4 +19,31 @@ body {
   justify-content: center;
   align-items: center;
   background-color: aliceblue;
+}
+
+/* container styles*/
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: aquamarine;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 10px 2px;
+}
+/* body styles*/
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px 0;
+}
+/* buttons styles*/
+.btn {
+  --hue: var(--hue-neutral);
+  border: 1px solid hsl(var(--hue), 100%, 30%);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
 }
