--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,213 +1,177 @@
 * {
   margin: 0;
   padding: 0;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: "Times New Roman", Times, serif;
-  user-select: none;
-}
-/* root styles*/
-:root {
-  --hue-neutral: 200;
 }
 
-p {
-  margin: 10px;
-  padding: 10px;
+html {
+  background-color: navy;
 }
 
-/* body styles*/
-//*body {
+#quiz {
+  background-color: aquamarine;
   position: relative;
-  background-color: blue;
   height: auto;
   width: 900px;
   margin: 30px auto;
+  border-radius: 40px;
+  padding: 2px 50px 50px 50px;
 }
-/* header styles*/
+
 #h1 {
   position: relative;
   text-align: center;
-  background-color: blue;
-  border-radius: 40px;
-}
-.qp {
-  text-align: center;
-}
-/* container styles*/
-.container {
-  width: 800px;
-  position: relative;
-  height: auto;
-  background-color: aquamarine;
-  border-radius: 40px;
-  margin: 30px auto;
-  box-shadow: 0 0 10px 2px;
-}
-/* body styles*/
-.btn-grid {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 10px;
-  margin: 20px 0;
-}
-/* opitions styles*/
-.opitions {
-position: relative;
-width: 550px;
-margin-top: 15px ;
-}
-/* buttons styles*/
-.button {
-  position: relative;
-  width: 250px;
-  height: auto;
-  --hue: var(--hue-neutral);
-  border: 1px solid hsl(var(--hue), 100%, 30%);
-  background-color: hsl(var(--hue), 100%, 50%);
-  border-radius: 75px;
-  padding: 5px 10px;
-  outline: none;
-  cursor: pointer;
-  margin: 10px;
-
+  font-size: 60px;
+  background-color: #e6e6e6;
+  color: #001a33;
+  margin: 30px 10px 30px 10px;
+  padding: 2px 0px;
 }
 
-
-/* tracker styles*/
 #tracker {
   position: relative;
   margin: 20px 10px 10px 10px;
-  padding: 0 10px 0px 10px;  
+  padding: 0 10px 0 10px;
 }
-/* nos styles*/
-.nos{
-position: relative;
-display: inline-block;
-width: 50px;
-height: 50px;
-background-color: lightgray;
-border-radius: 50%;
-text-align: center;
-color: navy;
-padding: 15px;
-margin: 0px 50px 50px 50px;
-font-weight: bolder ;
-font-size: 22px;
-border: 1.5px solid navy;
 
-
+.nos {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #8c8c8c;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  padding: 11px;
+  margin: 0px 10px 10px 10px;
+  font-weight: bolder;
+  font-size: 22px;
+  border: 1.5px solid white;
 }
-/* h1 styles*/
+
 hr {
-
-  border: 2px solid crimson;
+  border: 2px solid #8c8c8c;
+  position: relative;
+  clear: both;
 }
-/* quizset styles*/
-#questions {
+
+#question {
   position: relative;
   color: white;
   font-size: 35px;
-  font-weight: bolder;
+  font-weight: bold;
   text-align: left;
   margin-left: 10px;
 }
 
-
-
-
-
-/* btn-hover styles*/
-.button:hover {
-  background-color: aliceblue;
-}
-/* start&next styles*/
-.start-btn {
+.options {
   position: relative;
-  float: center;
-  background-color: lightgray;
-  color: navy;
-  width: 230px;
-  padding: 7px;
-  cursor: pointer;
-  border-radius: 50px;
-  font-size: 28px;
-  box-shadow:2px 2px 0px 0px ;
-  margin: 5px 0px 0px 10px;
-  text-align: center;
+  width: 550px;
+  margin-top: 15px;
 }
 
-.next-btn {
+.button {
+  position: relative;
+  background-color: #e6f3ff;
+  width: 250px;
+  height: auto;
+  border: 1.5px solid #339cff;
+
+  margin: 10px;
+}
+
+.button span {
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  font-weight: bold;
+  color: #001a33;
+}
+
+.button:hover {
+  background-color: #99ceff;
+  cursor: pointer;
+}
+
+#submit {
   position: relative;
   float: right;
-  background-color: lightgray;
-  color: navy;
+  background-color: #595959;
+  color: white;
   width: 230px;
   padding: 7px;
-  cursor: pointer;
-  border-radius: 50px;
   font-size: 28px;
-  box-shadow:2px 2px 0px 0px ;
-  margin: 5px 0px 0px 10px;
+  font-weight: 900;
+  font-family: serif;
+  margin: 5px 0px 25px 10px;
+  border: 1px solid grey;
   text-align: center;
-}
-.next-btn:hover {
-background-color: darkgray;
+  box-shadow: 2px 2px 0px 0px rgba(191, 191, 191, 0.5);
 }
 
+#submit:hover {
+  cursor: pointer;
+  background-color: #808080;
+}
 
+footer {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+#progress {
+  position: relative;
+  float: left;
+  text-align: right;
+  margin-top: 20px;
+  font-size: 30px;
+  color: white;
+}
+
+#timer {
+  position: relative;
+  float: right;
+  text-align: right;
+  margin-top: 20px;
+  font-size: 30px;
+  color: white;
+}
+
+#resultBox {
+  display: none;
+}
 
 #quizSet {
- 
 }
-/* score&result styles*/
+
 #result {
-text-align: center;
-font-size:40 px;
-color: white;
-display: none;
+  text-align: center;
+  font-size: 40px;
+  color: white;
 }
 
 #retake {
-position: relative;
-margin: 10px auto 25px auto;
-display: flex;
-font-size: 28px;
-box-shadow:2px 2px 0px 0px ;
-color: navy;
-border-radius: 50px;
-background-color: lightgray;
-width: 230px;
-display: none;
-cursor: pointer;
-}
-#retake:hover {
-  background-color: darkgray;
-  text-align: center;
-}
-
-/* footer & progress & timer styles*/
-footer {
-position: relative;
-}
-#progress {
   position: relative;
+  display: block;
+  margin: 10px auto 25px auto;
+  background-color: #595959;
   color: white;
+  width: 230px;
+  padding: 7px;
+  border-radius: 50px;
+  font-size: 28px;
+  font-weight: 900;
+  font-family: serif;
+  border: 1px solid grey;
+  text-align: center;
+  box-shadow: 2px 2px 0px 0px rgba(191, 191, 191, 0.5);
 }
-#timer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-}
-
-
-/* controls styles*/
-.controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-/* hide styles*/
-.hide {
-  display: none;
+#retake:hover {
+  cursor: pointer;
+  background-color: #808080;
 }
